@startuml DiagramaClases

Mago "1" o--- "0..*" Magia: habilidades >

Personaje <|-- Mago

Habilidad <|-- Magia


class Personaje {
    String nombre
    Number nivel
    Number porcentaje_de_nivel
    Number vida_restante
    Number vida_total
    Number elo
    __init__(self, nombre, vida_total, vida_restante)
}
class Mago{
    Number mana_total
    Number mana_restante
    __init__(self, nombre)
    atacar(personaje_objetivo, habilidad)
    modificar_vida(cantidad)
    modificar_vida_total(cantidad)
    modificar_mana(cantidad)
    modificar_mana_total(cantidad)
    add_habilidad(habilidad)
}
class Habilidad{
    String nombre
    String danyo
    __init__(self, nombre, danyo)
}
class Magia{
    Number coste_mana
    __init__(self, nombre, danyo, coste_mana)
}
@enduml